--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 1000;
@@ -249,8 +249,7 @@ nav h1 a {
 
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 100%;
+  position: relative;
 }
 
 #restaurant-name {
@@ -268,7 +267,7 @@ nav h1 a {
   border-radius: 10px;
   max-width: 90%;
   padding: 5px;
-  width: 90%;
+  width: 80%;
 }
 
 #restaurant-address {
@@ -285,10 +284,11 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
+  max-width: 90%;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+  width: 82%;
 }
 
 #restaurant-container, #reviews-container {
